# streaming-service

./: .env-example  .gitignore  README.md  docker-compose.yaml  prometheus.yaml  pyproject.toml
services/auth/: .env-example  pyproject.toml  pytest.ini
services/auth/alembic/: env.py
services/auth/alembic/versions/: 2025_04_04_1807-ed2871364e5e_unification_of_the_favorites_table.py  2025_10_01_0223-b6af2952ef5c_add_user_orm.py  2025_10_03_0223-dda7bfdd60c4_add_user_orm_and_refresh_token_orm.py  2025_10_06_0136-f423d67c27bb_add_ip_and_user_agent_fields_to_refresh_.py  2025_10_18_0832-e82807b3ac34_refresh_tokens_table_delete_token_hash_.py  2025_10_19_0954-5fc9a133585f_add_uq_user_client_constraint_to_.py  2025_10_28_1456-52adae61cc3b_delete_name_field_from_users_table.py
services/auth/src/: __init__.py  config.py  db.py  exceptions.py  google_oauth.py  main.py
services/auth/src/adapters/: aiohttp.py  aiohttp_client.py  base.py  content.py  google_client.py  jwt_provider.py  password_hasher.py  rabbitmq.py  smtp_client.py
services/auth/src/api/: __init__.py  auth.py  dependencies.py  handler.py  oauth.py  users.py
services/auth/src/applications/: base.py
services/auth/src/connectors/: redis_conn.py
services/auth/src/factories/: db_manager.py  service.py
services/auth/src/managers/: db.py  redis.py
services/auth/src/models/: __init__.py  base.py  favorites.py  refresh_tokens.py  users.py
services/auth/src/repositories/: base.py  refresh_tokens.py  users.py
services/auth/src/schemas/: auth.py  base.py  favorites.py  friendship.py  pydatic_types.py  users.py
services/auth/src/services/: auth.py  base.py  users.py  utils.py
services/auth/src/tasks/: celery_app.py  tasks.py
services/auth/src/views/: __init__.py  auth.py
services/auth/tests/: conftest.py
services/auth/tests/integration_tests/: test_auth.py
services/auth/tests/mock_data/: users.json
services/catalog/: .env-example  alembic.ini  pyproject.toml
services/catalog/alembic/: env.py
services/catalog/src/: __init__.py  config.py  enums.py  exceptions.py  main.py
services/catalog/src/api/: __init__.py  actors.py  comments.py  countries.py  dependencies.py  directors.py  episodes.py  genres.py  laguages.py  metrics.py  movies.py  rating.py  seasons.py  shows.py
services/catalog/src/models/: base.py  comments.py  countries.py  genres.py  movies.py  rating.py  shows.py
services/catalog/src/protocols/: db_manager.py
services/catalog/src/repositories/: actors.py  base.py  comments.py  countries.py  directors.py  genres.py  movies.py  rating.py  seasons.py  shows.py
services/catalog/src/schemas/: base.py  comments.py  episodes.py
services/catalog/src/services/: actors.py  auth.py  base.py  comments.py  episodes.py  genres.py  languages.py  movies.py  seasons.py
services/catalog/tests/: conftest.py
services/catalog/tests/mock_data/: comments.json  countries.json  genres.json  movies.json  movies_genres.json  seasons.json  shows.json
services/content-service/: .env-test  pyproject.toml  pytest.ini
services/content-service/alembic/: env.py
services/content-service/alembic/versions/: 2025_03_31_0540-85077dc80921_add_films_table.py  2025_03_31_2016-b830a2abc8b6_add_seriesorm_seasonorm_episodeorm.py  2025_04_01_0104-028c4874505a_add_seriesorm_seasonorm_episodeorm.py  2025_04_09_0029-409a79b7b8a1_add_films_series_seasons_and_episodes_.py  2025_04_11_1539-4baeec0028cf_add_commentorm.py  2025_04_11_1734-8e1228ac825b_add_uniqueconstraint_for_series_id_and_.py  2025_04_18_0157-dd31543bc325_unique_episode_per_season.py  2025_04_18_0229-b41015f2194f_add_unique_constraints_to_films_table_.py  2025_04_19_0000-8433fe832cde_rename_unique_season_constraint_to_.py  2025_05_02_1511-a5dcb6c5d276_add_rating_orm.py  2025_05_04_1755-6c27d112cf98_add_rating_aggregates_table.py  2025_05_23_2021-23eb614179ca_create_all_tables.py  2025_07_16_0321-7bd1bc433bcb_change_file_cover_ids_to_urls.py  2025_07_18_0952-b83ff96b2e9e_add_unique_constrains_for_urls.py  2025_07_30_2350-e05d859acc8c_fix_video_url_type.py  2025_08_03_2136-e4eced459593_add_created_add_column_to_comments_table.py  2025_08_04_1747-705db6d50cf9_changle_column_name_from_rating_to_.py  2025_08_08_2315-03f11fb07a2d_add_genre_orm_and_association_tables.py  2025_08_10_0628-da35599d2f6a_add_actors_and_association_tables_and_.py  2025_08_15_1131-5f498c432fc5_on_delete_cascade_for_season_orm.py  2025_08_25_1734-d9df3ac95dd8_create_all_tables.py  2025_08_25_1928-93a29d39d13e_add_created_at_and_updated_at_fields.py  2025_08_26_2114-22b9294f5d51_add_director_orm.py  2025_08_26_2200-3db4d8d931b8_add_country_orm.py  2025_08_26_2206-8b96e3041478_add_language_orm.py  2025_08_30_1711-97965ac8b4fd_create_all_tables.py
services/content-service/protos/: content.proto
services/content-service/src/: __init__.py  config.py  db.py  enums.py  exceptions.py  log_config.py  main.py
services/content-service/src/adapters/: rabbit_adapter.py  rabbitmq.py
services/content-service/src/api/: __init__.py  actors.py  comments.py  countries.py  dependencies.py  directors.py  episodes.py  films.py  genres.py  laguages.py  metrics.py  movies.py  rating.py  seasons.py  series.py  shows.py
services/content-service/src/applications/: films.py
services/content-service/tests/: conftest.py  utils.py
services/files-service/: Dockerfile  pyproject.toml
services/files-service/alembic/: env.py
services/files-service/src/: __init__.py  config.py  container.py  db.py  enums.py  exceptions.py  main.py
services/media-processor/: pyproject.toml
services/media-processor/alembic/: env.py
services/media-processor/src/: config.py  main.py
services/media-processor/templates/: index.html
services/users-service/: Dockerfile  pyproject.toml
services/users-service/alembic/: env.py
services/users-service/protos/: helloworld.proto  helloworld_pb2.py  helloworld_pb2_grpc.py
services/users-service/src/: __init__.py  config.py  db.py  exceptions.py  main.py  middleware.py
(+275 files in other folders)
