[project]
name = "users-microservice"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "fastapi[all]>=0.115.12",
    "ruff>=0.11.2",
    "sqlalchemy>=2.0.40",
]

[tool.ruff]
line-length = 100
