[project]
name = "auth-service"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "aio-pika>=9.5.5",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "authlib>=1.5.1",
    "black>=25.1.0",
    "celery>=5.5.0",
    "fastapi[all]>=0.115.12",
    "greenlet>=3.1.1",
    "grpcio>=1.71.0",
    "grpcio-tools>=1.71.0",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-client>=0.21.1",
    "pyjwt>=2.10.1",
    "redis>=5.2.1",
    "ruff>=0.11.2",
    "sqlalchemy>=2.0.40",
]

[tool.ruff]
line-length = 100
exclude = ["alembic", "protos"]
