[project]
name = "auth-service"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "aiohttp>=3.12.15",
    "aiosmtplib>=5.0.0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "cryptography>=46.0.3",
    "fastapi[all]>=0.115.12",
    "greenlet>=3.1.1",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.40",
    "tenacity>=9.1.2",
    "uuid7>=0.1.0",
]

[tool.ruff]
line-length = 100
exclude = ["alembic"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.14.1",
]
